update clean code
